Exc5/deny_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default  
spec:
  podSelector: {}     # применяется ко всем подам
  policyTypes:
    - Ingress         # запрещает весь входящий трафик
  ingress: []         # блокировать весь входящий трафик
